--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="app/style.css">
 </head>
 <body>
-    <input type="text" class="input">
+    <div class="inputText">
+        <input type="text" class="input">
+    </div>
 
     <script src="app/script.js"></script>
 </body>
